# metapython

./: CMakeLists.txt  PKGBUILD  README.md  defines.h  get_current_time.hpp  helpers.hpp  main.cpp  metapython-completion.bash  parsed_arguments.cpp  parsed_arguments.h  pycompile.hpp  pyexec.hpp  tests.cpp
